--- a/Index.html
+++ b/Index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <script src='main.js'></script>
+    <title> Cats & Coffee /title>
+
 </head>
 <body>
     Nome: cats & coffee
-    Descrição: 
+    Descrição: uma cafeteria fofa onde você pode 
 </body>
 </html>
