--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body>
     <header>
-        <nav>
-            <a href="Index.html"> Home </a>
-            <a href="Produtos.html"> Produtos </a>
-            <a href="Contatos.html"> Contatos </a>
-        </nav>
+        <div class="caixa">
+            <h3><img class="imagem-logo" src="logo.jpg"></h3>
+            <nav class="cabecalho">
+                <a href="Index.html"> Home </a>
+                <a href="Produtos.html"> Produtos </a>
+                <a href="Contatos.html"> Contatos </a>
+            </nav>
+        </div>
     </header>
     <main>
         <div class="conteudo">
@@ -27,7 +30,7 @@
         <p><em> </em></p>   
         </div>
     <div class="beneficios">
-        <h2>Beneficios da nossa cafeteria</h2>
+        <h2> - Benefícios da nossa cafeteria</h2>
             <ul>
                 <li>Você sempre sairá mais feliz do que entrou</li>
                 <li>Ambiente sempre limpo e climatizado</li>
