--- a/Produtos.html
+++ b/Produtos.html
@@ -5,8 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Produtos - Cats & Coffee</title>
+    <link rel="stylesheet" type="text/css" href="Style.css">
 </head>
 <body>
-    <h1> Isso é uma página de Produtos!! </h1>
+<header>
+    <div class="caixa">
+        <h3><img class="imagem-logo" src="logo.jpg"></h3>
+        <nav class="cabecalho">
+            <a href="Index.html"> Home </a>
+            <a href="Produtos.html"> Produtos </a>
+            <a href="Contatos.html"> Contatos </a>
+          </nav>
+       </div>
+    </header>
+  <main>
 </body>
 </html>
+<ul>
+    <li>
+        <h2> Classic Capuccino </h2>
+        <img class="imagem-produtos" src="produtos01.jpg">
+
+
+    </li>
+    <li>
+        <h2> Special Brownie </h2>
+        <img class="imagem-produtos" src="produtos02.jpg">
+
+
+    </li>
+    <li>
+        <h2> Strawberry Cupcake </h2>
+        <img class="imagem-produtos" src="produtos03.jpg">
+
+
+    </li>
+
+
+</ul>
+</main>
